compiler-core/src/parse/snapshots/gleam_core__parse__tests__return_in_type_context_error.snap
---
source: compiler-core/src/parse/tests.rs
expression: type Test = $return Int
---
----- SOURCE CODE
type Test = $return Int

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:11
  │
1 │ type Test = $return Int
  │           ^ I was expecting a type after this

See: https://tour.gleam.run/basics/assignments/
